--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -17,7 +17,7 @@
         first place prizes in local competitions. I hope it becomes one of your
         favorites as well!
       </p>
-      <img src="./images/cooking-info.png" alt="cooking info" />
+      <img src="./images/recipe-info.png" alt="recipe info" />
     </section>
     <hr />
     <section class="general-recipe">
